# quantum-cosmology-lab

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  NOTICE  PLANS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/architecture/: overview.md
docs/methods/: experiment-standard.md  figure-and-table-style-guide.md
docs/operations/: archival-release-workflow.md  ibm-runtime-setup.md  internal-review-checklist.md  replication-checklist.md  results-and-provenance.md  user-guide.md
docs/references/: README.md  citation-and-bibliography-policy.md
experiments/: __init__.py
experiments/grand_unification_epoch_toy/: README.md  __init__.py  analyze.py  benchmark.py  circuit.py  common.py  config.yaml  model.md  observables.py  results.md  run_aer.py  run_ibm.py  (+1 more)
notebooks/: README.md
scripts/: README.md  __init__.py
tests/: __init__.py  path_setup.py  test_analysis_reporting.py  test_backends.py  test_benchmarks.py  test_configuration.py  test_current_repository_state.py  test_foundation_pipeline.py  test_grand_unification_epoch_toy.py  test_gut_toy_gauge.py  test_hardware_program.py  test_ibm_runtime_scripts.py  test_imports.py  test_minisuperspace_frw.py  test_observables.py  test_particle_creation_flrw.py  test_particle_creation_hardware_feasibility.py  test_particle_creation_independent.py  test_path_formatting.py  test_phase6_milestones.py  test_planck_epoch_minisuperspace.py  test_plotting_backend.py  test_qiskit_integration.py  test_repository_hygiene.py  test_repository_layout.py  test_validation.py
(+211 files in other folders)
